# llms-keep-secrets-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md  writingprompts_samples.json
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: analysis.json  experiment_results.json  summary_statistics.json
src/: analyze_and_visualize.py  experiment.py
