[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for LLM secret-keeping experiments"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.75.0",
    "datasets>=4.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.14.0",
    "scipy>=1.15.3",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
